--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@clerk/remix": "^2.2.15",
     "@remix-run/cloudflare": "^1.14.3",
     "@remix-run/cloudflare-workers": "^1.14.3",
     "@remix-run/react": "^1.14.3",
