--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@clerk/remix": "^2.2.15",
-    "@remix-run/cloudflare": "^1.14.3",
-    "@remix-run/cloudflare-workers": "^1.14.3",
-    "@remix-run/react": "^1.14.3",
+    "@remix-run/cloudflare": "1.13.0",
+    "@remix-run/cloudflare-workers": "1.13.0",
+    "@remix-run/react": "1.13.0",
     "cross-env": "^7.0.3",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
@@ -22,8 +22,8 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
-    "@remix-run/dev": "^1.14.3",
-    "@remix-run/eslint-config": "^1.14.3",
+    "@remix-run/dev": "1.13.0",
+    "@remix-run/eslint-config": "1.13.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
